--- a/contact/style.css
+++ b/contact/style.css
@@ -155,6 +155,10 @@
   .has-dropdown:hover .dropdown {
     display: block;
   }
+
+  .dropdown li {
+    list-style: none;
+  }
   
   .dropdown li a {
     color: #1a237e;
@@ -162,9 +166,12 @@
     display: block;
     text-decoration: none;
   }
+
+  
   
   .dropdown li a:hover {
     background-color: #f0f0f0;
+    list-style: none;
   }
   
   .dropdown-arrow {
