--- a/appointments-list/styles.css
+++ b/appointments-list/styles.css
@@ -23,10 +23,11 @@ body {
   padding: 0;
 }
 
-.container {
+.list_container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
+  margin-top: 2rem;
 }
 
 .header {
