some color changes

--- a/appointments-list/styles.css
+++ b/appointments-list/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #6200ea;
+  --primary: #4a90e2;
   --primary-light: #9d46ff;
   --primary-dark: #0a00b6;
   --secondary: #00c853;
